--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,16 @@
 * {
   padding: 0;
   margin: 0;
+  border: 0;
+  list-style: none;
+  text-decoration: none;
+  outline: none;
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+    Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
+    Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
 }
 
 body {
   background-image: url(./assets/cubes.png);
-  background-color: #32322c;
+  background-color: #2b2b2b;
 }
