Added more style to nav and added home

--- a/src/Component/Nav/Nav.scss
+++ b/src/Component/Nav/Nav.scss
@@ -4,6 +4,10 @@
   top: 0;
   left: 0;
   z-index: 10;
+  &.active {
+    background: rgba(255, 255, 255, 0.15);
+    backdrop-filter: blur(10px);
+  }
   .nav_container {
     position: relative;
     max-width: 1200px;
