--- a/src/Component/Home/Home.scss
+++ b/src/Component/Home/Home.scss
@@ -1,3 +1,5 @@
+@import "../../style/globals.scss";
+
 #home {
   display: flex;
   flex-direction: column;
@@ -12,5 +14,28 @@
       object-fit: cover;
       object-position: center;
     }
+  }
+  .profile_text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+
+    h3 {
+      color: $white;
+      font-size: 2rem;
+      @media screen and (max-width: 500px) {
+        font-size: 1.5rem;
+      }
+      span {
+        color: $purple;
+      }
+    }
+  }
+  .job {
+    color: $white;
+    opacity: 0.6;
+    font-size: 0.85rem;
   }
 }
