--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import "./style/globals.scss";
+
 * {
   padding: 0;
   margin: 0;
@@ -28,5 +30,5 @@ img {
 
 body {
   background-image: url(./assets/cubes.png);
-  background-color: #2b2b2b;
+  background-color: $backgroundColor;
 }
