--- a/src/Component/Nav/Nav.scss
+++ b/src/Component/Nav/Nav.scss
@@ -60,6 +60,7 @@
         svg {
           color: $white;
           opacity: 0.6;
+          font-size: 1.25rem;
           cursor: pointer;
           transition: 0.5s;
           &:hover {
