--- a/src/Component/About/About.scss
+++ b/src/Component/About/About.scss
@@ -55,12 +55,12 @@
     }
     a {
       text-decoration: none;
-      color: #000;
-      background: #fff;
+      color: $black;
+      background-color: $white;
       padding: 0.65rem 1rem;
       border-radius: 10px;
       font-size: 0.85rem;
-      width: 165px;
+      width: 145px;
     }
   }
 }
