--- a/src/Component/Skills/Skills.scss
+++ b/src/Component/Skills/Skills.scss
@@ -1,3 +1,5 @@
+@import "../../style/globals.scss";
+
 .select {
   display: flex;
   justify-content: center;
@@ -5,8 +7,8 @@
   margin-bottom: 5rem;
 
   button {
-    color: #000;
-    background: #fff;
+    color: $black;
+    background: $white;
     padding: 0.65rem 1rem;
     border-radius: 10px;
     font-size: 0.85rem;
@@ -14,10 +16,35 @@
     cursor: pointer;
     border: none;
     margin-top: 1rem;
-    font-family: "Poppins";
 
     &.active {
-      background: #8c12f0;
+      background: $cyan;
+      color: $white;
+    }
+  }
+}
+
+.skills {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 700px;
+  row-gap: 4rem;
+
+  @media screen and (max-width: 500px) {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+  }
+
+  .icon {
+    display: flex;
+    justify-content: center;
+    svg {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
       color: #fff;
     }
   }
