--- a/src/Component/Skills/Skills.scss
+++ b/src/Component/Skills/Skills.scss
@@ -44,8 +44,46 @@
     svg {
       width: 100px;
       height: 100px;
-      border-radius: 50%;
-      color: #fff;
+      color: $white;
+    }
+  }
+}
+
+.experiencs {
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  color: $white;
+  .experience {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 3rem;
+    span {
+      font-size: 2.75rem;
+      padding-left: 2.5rem;
+
+      @media screen and (max-width: 405px) {
+        font-size: 1rem;
+      }
+    }
+    .position {
+      width: 300px;
+      padding-left: 2.5rem;
+      h3 {
+        font-size: 1.25rem;
+        @media screen and (max-width: 405px) {
+          font-size: 0.85rem;
+        }
+      }
+      p {
+        font-size: 0.85rem;
+        opacity: 0.6;
+
+        @media screen and (max-width: 405px) {
+          font-size: 0.65rem;
+        }
+      }
     }
   }
 }
