Fixed mobile responsive

--- a/src/Component/Contact/Contact.scss
+++ b/src/Component/Contact/Contact.scss
@@ -10,7 +10,12 @@
   border-radius: 15px;
   .contact_info {
     display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
     justify-content: space-between;
+    @media screen and (max-width: 500px) {
+      justify-content: center;
+    }
     margin-top: 2rem;
   }
 }
