--- a/src/Component/Skills/Skills.scss
+++ b/src/Component/Skills/Skills.scss
@@ -11,7 +11,7 @@
     background: $white;
     padding: 0.65rem 1rem;
     border-radius: 10px;
-    font-size: 0.85rem;
+    font-size: 1rem;
     text-transform: capitalize;
     cursor: pointer;
     border: none;
@@ -40,7 +40,12 @@
 
   .icon {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    color: $white;
+    font-size: 1.25rem;
     svg {
       width: 100px;
       height: 100px;
