Removed text from home

--- a/src/Component/Home/Home.scss
+++ b/src/Component/Home/Home.scss
@@ -1,5 +1,7 @@
 @import "../../style/globals.scss";
-
+.container-home {
+  margin-top: 7rem;
+}
 #home {
   display: flex;
   flex-direction: column;
