--- a/src/Component/Contact/Contact.scss
+++ b/src/Component/Contact/Contact.scss
@@ -7,6 +7,7 @@
   margin-left: auto;
   margin-right: auto;
   text-align: center;
+  margin-top: 1rem;
   border-radius: 15px;
   .contact_info {
     display: flex;
