--- a/src/Component/Scroll/Scroll.scss
+++ b/src/Component/Scroll/Scroll.scss
@@ -2,6 +2,9 @@
   position: fixed;
   top: 50%;
   left: 200px;
+  @media screen and (max-width: 850px) {
+    display: none;
+  }
 }
 
 .arrow-button {
