--- a/src/Component/Footer/Footer.scss
+++ b/src/Component/Footer/Footer.scss
@@ -41,6 +41,9 @@
       svg {
         opacity: 0.7;
         cursor: pointer;
+        color: $white;
+        opacity: 0.6;
+        transition: 0.5s;
         &:hover {
           opacity: 1;
         }
