--- a/src/Component/About/About.scss
+++ b/src/Component/About/About.scss
@@ -5,31 +5,48 @@
   grid-template-columns: repeat(2, 1fr);
   place-items: center;
   position: relative;
-  @media screen and (max-width: 700px) {
+  @media screen and (max-width: 1150px) {
     grid-template-columns: 1fr;
     margin-bottom: 7rem;
   }
 
   .about_left {
     background: $cyan;
-    max-width: 450px;
-    height: 450px;
+
+    max-width: 650px;
+    max-height: 550px;
     justify-self: center;
-    border-radius: 5px;
+    border-radius: 0.5rem;
     box-shadow: 0 0 20px $cyan;
 
     img {
       object-fit: cover;
-      width: 100%;
-      height: 100%;
+      width: 650px;
+      height: 550px;
+      border-radius: 0.5rem;
+      @media screen and (max-width: 700px) {
+        max-width: 100%;
+        max-height: 100%;
+      }
     }
   }
   .about_right {
+    position: absolute;
+    right: 150px;
     color: #fff;
     padding: 1rem;
+    background-color: rgba(19, 18, 18, 0.7);
+    box-shadow: 0 0 20px $cyan;
 
-    @media screen and (max-width: 700px) {
+    border-radius: 0.5rem;
+    @media screen and (max-width: 1150px) {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
       padding: 0;
+      background-color: transparent;
+      box-shadow: none;
+      position: initial;
       margin-top: 2rem;
     }
 
