--- a/src/Component/About/About.scss
+++ b/src/Component/About/About.scss
@@ -31,25 +31,27 @@
     }
   }
   .about_right {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     position: absolute;
     right: 150px;
     color: #fff;
-    padding: 1rem;
     background-color: rgba(19, 18, 18, 0.7);
     box-shadow: 0 0 20px $cyan;
-
+    padding: 1.25rem;
     border-radius: 0.5rem;
     @media screen and (max-width: 1150px) {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
       padding: 0;
       background-color: transparent;
       box-shadow: none;
       position: initial;
       margin-top: 2rem;
     }
-
+    h3 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
     p {
       font-size: 1rem;
       margin-bottom: 1rem;
@@ -70,7 +72,7 @@
       color: $black;
       background-color: $white;
       padding: 0.65rem 1rem;
-      border-radius: 10px;
+      border-radius: 0.75rem;
       font-size: 0.85rem;
     }
   }
