--- a/src/Component/Contact/Contact.scss
+++ b/src/Component/Contact/Contact.scss
@@ -10,6 +10,10 @@
   margin-right: auto;
   text-align: center;
   border-radius: 15px;
+  .smaller {
+    width: 90%;
+    margin: auto;
+  }
   .contact_info {
     display: flex;
     flex-wrap: wrap;
@@ -20,7 +24,6 @@
       justify-content: center;
     }
     margin-top: 2rem;
-
     a {
       color: $black;
     }
